client/src/components/css/main.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  user-select: none;
}

::-webkit-scrollbar {
  /* width: 15px; */
}

.logo {
  width: 75px;
  margin: var(--spacing-medium) var(--spacing-regular);
  margin-left: 0;
}

#root {
  font-family: var(--main-font);
  background: url("../images/background.png") no-repeat;
  background-size: cover;
}

main {
  padding: var(--spacing-small) var(--spacing-regular);
  padding-bottom: var(--spacing-3xlarge);
  min-height: 100vh;
}

main .wrapper {
  max-width: 450px;
  margin: 0 auto;
}

main.desktop-view {
  /* max-width: 1300px; */
  margin: auto;
  height: 100vh;
  overflow-y: hidden;

  display: grid;
  grid-template-columns: 375px 1fr 375px;
  grid-column-gap: var(--spacing-medium);
  padding: var(--spacing-large);
}

main.desktop-view aside {
  overflow: auto;
  position: relative;
}

header {
  max-width: 450px;
  margin: auto;
}

